Finished styling rating state

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -69,6 +69,7 @@ body {
     line-height: 2.2rem;
     width: 27.9rem;
     margin-bottom: 2.4rem;
+    font-size: 1.4rem;
 }
 
 .btns {
@@ -76,14 +77,16 @@ body {
     margin-bottom: 2.4rem;
     width: 27.9rem;
     justify-content: space-between;
-    gap: 1.7rem;
 }
 
 .btn {
-    padding: 1rem 1.8rem;
     border-radius: 50%;
     border: none;
-    flex: 1;
+    font-size: 1.4rem;
+    width: 4.2rem;
+    height: 4.2rem;
+    background-color: var(--dark-blue);
+    color: var(--medium-gray);
 }
 
 .submit-btn {
@@ -111,6 +114,10 @@ footer {
     font-size: 11px;
     text-align: center;
     color: white;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    padding-bottom: 1rem;
 }
 
 footer a {
