--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,7 +72,7 @@ body {
     font-size: 1.4rem;
 }
 
-.btns {
+.form__btns {
     display: flex;
     margin-bottom: 2.4rem;
     width: 27.9rem;
@@ -87,9 +87,20 @@ body {
     height: 4.2rem;
     background-color: var(--dark-blue);
     color: var(--medium-gray);
+    cursor: pointer;
 }
 
-.submit-btn {
+.btn:hover {
+    background-color: var(--orange);
+    color: var(--white);
+    transition: all .2s ease-in;
+}
+
+.btn.active {
+    background-color: var(--light-grey);
+}
+
+.form__submit-btn {
     display: block;
     margin: 0 auto;
     border-radius: 2.2rem;
@@ -100,6 +111,13 @@ body {
     letter-spacing: 1.8px;
     text-transform: uppercase;
     font-size: 1.4rem;
+    cursor: pointer;
+}
+
+.form__submit-btn:active {
+    color: var(--orange);
+    background-color: var(--white);
+    transition: all .1s ease;
 }
 
 
