--- a/styles/styles.css
+++ b/styles/styles.css
@@ -129,9 +129,36 @@ body {
 */
 #thanks-state {
     padding: 3.4rem 2.4rem 3.7rem 2.4rem;
+    text-align: center;
 }
 
+.ty-img {
+    margin-bottom: 2.4rem;
+}
 
+.selection-result {
+    padding: .5rem 1.2rem;
+    background-color: var(--dark-blue);
+    width: 16.8rem;
+    margin: auto;
+    font-size: 1.4rem;
+    color: var(--orange);
+    border-radius: 2.25rem;
+    margin-bottom: 2.4rem;
+    line-height: 2.2rem;
+}
+
+.ty-header {
+    font-size: 2.4rem;
+    line-height: 3rem;
+    margin-bottom: 1rem;
+}
+
+.ty-content {
+    color: var(--medium-gray);
+    font-size: 1.4rem;
+    line-height: 2.2rem;
+}
 
 
 
