--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,7 +50,6 @@ body {
 */
 
 #rating-state {
-    display: none;
     padding: 2.4rem 2.4rem 3.2rem 2.4rem;
 }
 
@@ -128,11 +127,13 @@ body {
     ============= THANK YOU STATE STYLING =============
 */
 #thanks-state {
+    display: none;
     padding: 3.4rem 2.4rem 3.7rem 2.4rem;
     text-align: center;
 }
 
 .ty-img {
+    width: 14.4rem;
     margin-bottom: 2.4rem;
 }
 
